--- a/tex/homework_template.tex
+++ b/tex/homework_template.tex
@@ -19,20 +19,23 @@
 
 \documentclass[fleqn,twoside]{article}
 
+\usepackage[shortlabels]{enumitem}
 \usepackage{fancyhdr} % Required for custom headers
+%\usepackage{showkeys} % Used to show labels
 \usepackage{lastpage} % Required to determine the last page for the footer
 \usepackage{extramarks} % Required for headers and footers
 \usepackage[usenames,dvipsnames]{color} % Required for custom colors
 \usepackage{graphicx} % Required to insert images
 \usepackage{listings} % Required for insertion of code
 \usepackage{courier} % Required for the courier font
+\usepackage{pifont} % Required for the dingbats
 \usepackage{enumitem} % used to alter style of enumerations
 \usepackage{lipsum} % used to alter style of enumerations
 \usepackage{varwidth} % used to alter style of enumerations
 \usepackage{amsmath,amssymb} % used to alter style of enumerations
 \usepackage[colorlinks=true,pagebackref=true,linkcolor=blue]{hyperref}
-\usepackage{wrapfig}
 \usepackage{Baskervaldx}
+\usepackage{wrapfig}
 
 
 % Margins
@@ -70,33 +73,39 @@ HWK_LANGUAGE_CONFIGS_HWK
 %	Skip this unless you know what you're doing
 %----------------------------------------------------------------------------------------
 
-% Header and footer for when a page split occurs within a problem environment
-\newcommand{\enterProblemHeader}[1]{
-\nobreak\extramarks{#1}{#1 continued on next page\ldots}\nobreak
-\nobreak\extramarks{#1 (continued)}{#1 continued on next page\ldots}\nobreak
-}
-
 \newenvironment{smashedalign}
  {\par$\!\aligned}
   {\endaligned$\par}
 
+\newcommand{\uanswer}[1]{\underline{\underline{#1}}}
+
+\newcommand{\matp}[1]{\begin{pmatrix} #1 \end{pmatrix}}
+
+% Header and footer for when a page split occurs within a problem environment
+\newcommand{\enterProblemHeader}[1]{
+ \nobreak\extramarks{#1}{#1 continued on next page\ldots}\nobreak
+ \nobreak\extramarks{#1 (continued)}{#1 continued on next page\ldots}\nobreak
+}
+
 % Header and footer for when a page split occurs between problem environments
 \newcommand{\exitProblemHeader}[1]{
-\nobreak\extramarks{#1 (continued)}{#1 continued on next page\ldots}\nobreak
-\nobreak\extramarks{#1}{}\nobreak
+ \nobreak\extramarks{#1 (continued)}{#1 continued on next page\ldots}\nobreak
+ \nobreak\extramarks{#1}{}\nobreak
 }
 
 \setcounter{secnumdepth}{0} % Removes default section numbers
 \newcounter{homeworkProblemCounter} % Creates a counter to keep track of the number of problems
+\newcounter{sectionCounter} % Creates a counter to keep track of the number of problems
 
 \newcommand{\homeworkProblemName}{}
+
 \newenvironment{homeworkProblem}[1][Problem \arabic{homeworkProblemCounter}]{ % Makes a new environment called homeworkProblem which takes 1 argument (custom name) but the default is "Problem #"
-\stepcounter{homeworkProblemCounter} % Increase counter for number of problems
-\renewcommand{\homeworkProblemName}{#1} % Assign \homeworkProblemName the name of the problem
-\section{\homeworkProblemName} % Make a section in the document with the custom problem count
-\enterProblemHeader{\homeworkProblemName} % Header and footer within the environment
+  \stepcounter{homeworkProblemCounter} % Increase counter for number of problems
+  \renewcommand{\homeworkProblemName}{#1} % Assign \homeworkProblemName the name of the problem
+  \subsection{\homeworkProblemName} % Make a section in the document with the custom problem count
+  \enterProblemHeader{\homeworkProblemName} % Header and footer within the environment
 }{
-\exitProblemHeader{\homeworkProblemName} % Header and footer after the environment
+  \exitProblemHeader{\homeworkProblemName} % Header and footer after the environment
 }
 
 \newcommand{\problemAnswer}[1]{ % Defines the problem answer command with the content as the only argument
@@ -104,12 +113,13 @@ HWK_LANGUAGE_CONFIGS_HWK
 }
 
 \newcommand{\homeworkSectionName}{}
-\newenvironment{homeworkSection}[1]{ % New environment for sections within homework problems, takes 1 argument - the name of the section
+\newenvironment{homeworkSection}[1][Section \arabic{sectionCounter}]{ % New environment for sections within homework problems, takes 1 argument - the name of the section
 \renewcommand{\homeworkSectionName}{#1} % Assign \homeworkSectionName to the name of the section from the environment argument
-\subsection{\homeworkSectionName} % Make a subsection with the custom name of the subsection
+\stepcounter{sectionCounter} % Increase counter for number of problems
+\section{\homeworkSectionName} % Make a subsection with the custom name of the subsection
 \enterProblemHeader{\homeworkProblemName\ [\homeworkSectionName]} % Header and footer within the environment
 }{
-\enterProblemHeader{\homeworkProblemName} % Header and footer after the environment
+\exitProblemHeader{\homeworkProblemName} % Header and footer after the environment
 }
 
 %----------------------------------------------------------------------------------------
