Remove class time and instructor from the page headings and leave the class name, homework title and author name, as well as any continuation marks...

--- a/tex/homework_template.tex
+++ b/tex/homework_template.tex
@@ -64,8 +64,7 @@ HWK_HEADER_CONFIGS_HWK
 \pagestyle{fancy}
 \fancyhead{}
 \fancyhead[RO,LE]{\hmwkAuthorName} % Top left header
-\fancyhead[C]{\hmwkClass\ (\hmwkClassInstructor\ \hmwkClassTime): \hmwkTitle} % Top center head
-\fancyhead[RE,LO]{\firstxmark} % Top right header
+\fancyhead[RE,LO]{\hmwkClass: \hmwkTitle\ \firstxmark} % Top center head
 \fancyfoot{}
 \fancyfoot[RO,LE]{Page\ \thepage\ of\ \protect\pageref{LastPage}}
 \fancyfoot[RE,LO]{\lastxmark} % Bottom left footer
