Placed tracing framework within parsing and template substitution. Now can inspect errors from pdflatex and attempt to match error location in the generated tex file and the original hwk file

--- a/tex/homework_template.tex
+++ b/tex/homework_template.tex
@@ -200,10 +200,10 @@ HWK_LANGUAGE_CONFIGS_HWK
 %\newpage
 
 %----------------------------------------------------------------------------------------
-%	QUESTIONS LOOP
+%	SECTIONS LOOP
 %----------------------------------------------------------------------------------------
 
-HWK_QUESTIONS_LOOP_HWK
+HWK_SECTIONS_LOOP_HWK
 
 %----------------------------------------------------------------------------------------
 
